syntax = "proto3";

import "request.proto";
import "response.proto";

message WrapperMessage {

    MessageType messageType = 1;

    oneof msg {

		FindTransactionsByAddressRequest findTransactionsByAddressRequest = 2;
		FindTransactionsByTagRequest findTransactionsByTagRequest = 3;
 	    FindTransactionByHashRequest findTransactionByHashRequest = 4;
 		SubmitTransactionBuilderRequest submitTransactionBuilderRequest = 5;
 		SubmitTransactionBytesRequest submitTransactionBytesRequest = 6;
 		DetermineApprovalConfidenceRequest determineApprovalConfidenceRequest = 7;
 		AddEffectListenerRequest addEffectListenerRequest = 8;
 		RemoveEffectListenerRequest removeEffectListenerRequest = 9;
 		SubmitEffectRequest submitEffectRequest = 10;
 		GetEffectRequest getEffectRequest = 11;

 		FindTransactionsByAddressResponse findTransactionsByAddressResponse = 12;
 		FindTransactionsByTagResponse findTransactionsByTagResponse = 13;
 		FindTransactionByHashResponse findTransactionByHashResponse = 14;
 		DetermineApprovalConfidenceResponse determineApprovalConfidenceResponse = 15;
 		GetEffectResponse getEffectResponse = 16;

    }

    enum MessageType {

		FIND_TRANSACTIONS_BY_ADDRESS_REQUEST = 0;
        FIND_TRANSACTIONS_BY_TAG_REQUEST = 1;
      	FIND_TRANSACTION_BY_HASH_REQUEST = 2;
      	SUBMIT_TRANSACTION_BUILDER_REQUEST = 3;
      	SUBMIT_TRANSACTION_BYTES_REQUEST = 4;
      	DETERMINE_APPROVAL_CONFIDENCE_REQUEST = 5;
      	ADD_EFFECT_LISTENER_REQUEST = 6;
      	REMOVE_EFFECT_LISTENER_REQUEST = 7;
        SUBMIT_EFFECT_REQUEST = 8;
        GET_EFFECT_REQUEST = 9;

        FIND_TRANSACTIONS_BY_ADDRESS_RESPONSE = 10;
        FIND_TRANSACTIONS_BY_TAG_RESPONSE = 11;
        FIND_TRANSACTION_BY_HASH_RESPONSE = 12;
        DETERMINE_APPROVAL_CONFIDENCE_RESPONSE = 13;
        GET_EFFECT_RESPONSE = 14;

    }

}